# 2-3Project

./: package.json
Client/: package.json
Client/src/: App.tsx
Client/src/component/: LoginPage.tsx  StartPage.tsx
Client/src/pages/: computerLabPage.tsx  gardenPage.tsx  hallway.tsx  principalPage.tsx  prologPage.tsx
Client/src/tsFolder/: audio.ts  speech.ts
Server/: CMakeLists.txt  README.md  build.bat  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
Server/assets/: README.md
Server/serverFile/: damage.ts  db.ts  server.ts
Server/serverFile/data/: game.db
Server/src/: README.md
Server/src/game/: GameManager.cpp  GameManager.h
Server/src/game/battle/: Battle.cpp  Battle.h
Server/src/game/core/: Character.cpp  Character.h
Server/src/game/input/: InputHandler.cpp  InputHandler.h  input.json  output.json
Server/src/main/: main.cpp
Server/src/tsFile/: spellType.ts  spells.ts
